2010-11-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-setPrintInfo:): Record old print info with
	the document's undo manager (if there is one) as in Cocoa.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSSliderCell view.
	* Source/NSTableHeaderCell.m: Added call in 
	tableHeaderCellDrawingRectForBounds: to drawing methods in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSSliderCell view.
	* Source/NSSliderCell.m: Added call in drawKnobInCell:... and 
	drawBarInside:.. to drawing methods in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScrollView view.
	* Source/NSScrollView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSMenuView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSBrowser.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScroller view.
	* Source/NSScroller.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 